Temp release with owful debug output. Added Python serial data sender from data file.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
-[env:nanoatmega328]
+[env:uno]
 platform = atmelavr
 framework = arduino
-board = nanoatmega328
-upload_protocol = usbasp
-upload_flags = -Pusb -e
+board = uno
+upload-port = "/dev/ttyUSB0"
+
+
